# PolicyEvolverEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  STRATEGIC_LEARNING.md  __init__.py  client.py  evolution_logs.txt  inference.py  models.py  openenv.yaml  pyproject.toml  rule_output3.json  run1.json  run1_8b.json  run2.json  run2_8b.json  run_final_1.json  run_final_2.json  test_result.json  verify_icl.py  verify_repetition.py
server/: Dockerfile  app.py  environment.py  grader.py  requirements.txt  reward_evolution.py  task_generator.py
server/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_multi_episode.py  test_smoke_exploits.py
